SbcOS/configs/sbc/firewall.conf
# Generated by iptables-save v1.4.12 on Thu Oct  6 07:40:28 2017
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 10.255.2.0/24 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -s 10.255.2.0/24 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -s 10.255.2.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 10.255.2.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j DROP
-A INPUT -s 10.255.2.0/24 -j ACCEPT
-A INPUT -s 192.1.202.215/32 -p udp -m udp --sport 53 --dport 1024:65535 -j ACCEPT
-A INPUT -s 10.0.0.2/32 -p udp -m udp --sport 123 --dport 1024:65535 -j ACCEPT
-A INPUT -s 10.18.0.18/32 -p icmp --icmp-type 8 -j ACCEPT
-A INPUT -p udp -m udp -d 10.1.1.0/28 --dport 5060 -j ACCEPT
-A INPUT -p udp -m udp -d 10.1.1.0/28 --dport 5083 -j ACCEPT
-A INPUT -p udp -m udp -d 10.1.1.0/28 --dport 20000:50000 -j ACCEPT
-A INPUT -p tcp -m tcp -d 10.1.1.0/28 --dport 5060 -j ACCEPT
-A INPUT -p tcp -m tcp -d 10.1.1.0/28 --dport 5061 -j ACCEPT
-A INPUT -p tcp -m tcp -d 10.1.1.0/28 --dport 5062 -j ACCEPT
-A INPUT -s 10.0.0.0/24 -p udp -m udp -d 10.1.1.128/28 --dport 5060 -j ACCEPT
-A INPUT -s 212.202.95.128/25 -p udp -m udp -d 10.1.1.128/28 --dport 5060 -j ACCEPT
-A INPUT -p udp -m udp -d 10.1.1.128/28 --dport 20000:50000 -j ACCEPT
-A INPUT -j DROP
-A FORWARD -j DROP
-A OUTPUT -j ACCEPT
COMMIT
# Completed on Thu Oct  6 07:40:28 2017
